Fixed Filter Color Bug with Dark Mode

--- a/_styles/_bright.scss
+++ b/_styles/_bright.scss
@@ -9,6 +9,23 @@ body.light {
     .filter {
       color: $color-white;
     }
+
+    .Web-active, .Animation-active, .Design-active {
+      background-color: $color-white;
+    }
+
+    .Web-active {
+        color: $color-pink;
+    }
+
+    .Animation-active {
+      box-shadow: inset 0 0 0 2px $color-orange;
+      color: $color-orange;
+    }
+
+    .Design-active {
+      color: $color-green;
+    }
   }
 
   .content {
